--- a/src/hotelcasestudy/User_Checkout.form
+++ b/src/hotelcasestudy/User_Checkout.form
@@ -134,14 +134,14 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="COMPLETE"/>
+            <Property name="text" type="java.lang.String" value="Complete"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="70" y="280" width="160" height="60"/>
+              <AbsoluteConstraints x="80" y="280" width="140" height="40"/>
             </Constraint>
           </Constraints>
         </Component>
